2008-07-30  Jason Xia  <jasonxh@gmail.com>

	* src/Makefile.am, src/downarticledlg.cpp, src/downarticledlg.h,
	src/mainframe.cpp, src/mainframe.h, src/core/termdata.cpp,
	src/core/termdata.h: Initial effort to implement the "Download
	Article" feature.

	* src/pcmanx_gtk2.cpp (main), src/mainframe.cpp
	(CMainFrame::OnDestroy): Ensure Gdk thread safty.

	* po/POTFILES.in, po/zh_CN.po, po/zh_TW.po: Update translations. Need
	translations for the new messages in zh_TW locale.

2008-07-27  Jason Xia  <jasonxh@gmail.com>

	* plugin/src/plugin.cpp (NS_PluginInitialize) (NS_PluginShutdown)
	(nsPluginInstance::init) (nsPluginInstance::shut): Wrong place for
	initializing and cleaning up static members, which potentially leads
	to segmentation fault when refreshing a telnet page.

2008-07-26  Jason Xia  <jasonxh@gmail.com>

	* configure.ac: Fix a compatibility bug introduced in r418 with
	xulrunner older than 1.9. (mozilla plugin)

2008-07-25  Jason Xia  <jasonxh@gmail.com>

	* configure.ac, plugin/src/nsScriptablePeer.h: Add support for
	xulrunner 1.9. (mozilla plugin)

2008-06-28  Jason Xia  <jasonxh@gmail.com>

	* src/appconfig.cpp (CAppConfig::DoDataExchange): Fix the bug of
	nonpersistent "DetectDBChar" preference.

2008-06-19  Jason Xia  <jasonxh@gmail.com>

	* README: Add more detailed information for the configure option
	--enable-iplookup.

2008-06-04  Jim Huang  <jserv.tw@gmail.com>

	* src/core/fileutil.c (copyfile): Assign file mode argument passed to
	open(2).
	Added GPL license claim.

2008-04-18  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac: Make configure.ac simpler and clear.

2008-04-11  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* src/mainframe.cpp,
	src/mainframe.h: Polish the switch between normal/fullscreen/simple
	mode.

2008-04-06  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (ui_info):
	Added fullscreen switch in popup window.
	Inspired by the idea of DreamerC <dreamerwolf.tw@gmail.com>.
